# personalAgent

./: .env.example  .gitignore  README.md  pyproject.toml
.agent/: rules.md
.github/workflows/: digest.yml
config/: preferences.toml
dashboard/: README.md  astro.config.mjs  package.json
dashboard/src/layouts/: Layout.astro
dashboard/src/lib/: api.ts  db.ts
dashboard/src/pages/: applications.astro  index.astro  jobs.astro  settings.astro
deploy/: jobagent-bot.service  jobagent-ingest.service  jobagent-ingest.timer  jobagent-pipeline.service  jobagent-pipeline.timer
docs/: ARCHITECTURE.md  DEPLOYMENT.md  DEPLOYMENT_ALTERNATIVES.md  PLAN.md  V2_PLAN.md
scripts/: apply.py  apply_ats.py  genkey.py  ingest.py  init_db.py  install_services.sh  match.py  pipeline.py  run_api.py  run_bot.py  send_digest.py  telegram_login.py  vps_setup.sh
src/jobagent/: __init__.py  config.py  digest.py  fit.py  llm_client.py  preferences.py  secrets_store.py
src/jobagent/api/: __init__.py  app.py
src/jobagent/apply/: __init__.py  ats_flow.py  email_send.py  flow.py  generators.py
src/jobagent/bot/: __init__.py  app.py  notify.py  service.py
src/jobagent/core/: __init__.py  schemas.py
src/jobagent/ingestion/: __init__.py  base.py  registry.py  runner.py  util.py
tests/: conftest.py  test_api.py  test_apply.py  test_ats_adapters.py  test_ats_apply.py  test_bot.py  test_config.py  test_filters.py  test_fit.py  test_ingestion.py  test_llm.py  test_matching.py  test_preferences.py  test_schemas.py  test_secrets_store.py  test_sources_toggle.py  test_telegram.py
(+19 files in other folders)
