[project]
name = "personal-job-agent"
version = "0.1.0"
description = "Personal autonomous job-hunting agent — ingests postings from Telegram + job boards, matches them to your CV, and assists/automates applications. Orchestrated by Hermes Agent, controlled via Telegram."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

# Core deps needed from Phase 0/1 onward. Heavier integrations live in extras
# so a minimal install (schemas + store + config) stays fast.
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
]

[project.optional-dependencies]
telegram = ["telethon>=1.36", "python-telegram-bot>=21.0"]
mcp = ["fastmcp>=2.0"]
apply = ["playwright>=1.44"]
llm = ["openai>=1.30"]          # OpenRouter speaks the OpenAI API
dev = ["pytest>=8.0", "ruff>=0.5", "pytest-asyncio>=0.23"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jobagent"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
